# sharkscope

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ConnectionsTable.jsx  Globe.jsx  Header.jsx  HomeLocationModal.jsx  StatsBar.jsx  WorldMap.jsx
scripts/: build.py
src/sharkscope/: __init__.py  __main__.py  cli.py  server.py
