[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharkscope"
version = "0.1.0"
description = "Real-time network traffic visualization on a 2D map or 3D globe"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Raj Shekhar" },
]
keywords = ["wireshark", "network", "visualization", "packet-capture", "geoip", "tshark", "traffic-analysis", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "geoip2>=4.7.0",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
sharkscope = "sharkscope.cli:main"

[project.urls]
Homepage = "https://github.com/rsh3khar/sharkscope"
Documentation = "https://github.com/rsh3khar/sharkscope#readme"
Repository = "https://github.com/rsh3khar/sharkscope"
Issues = "https://github.com/rsh3khar/sharkscope/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sharkscope"]
# Include static files in package (not shared-data)
artifacts = ["src/sharkscope/static/**"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
